--- a/MyTrade/Views/Downline/DirectList.cshtml
+++ b/MyTrade/Views/Downline/DirectList.cshtml
@@ -101,6 +101,7 @@
                                             @*<th>Joining Date</th>*@
                                             <th>Package</th>
                                             <th>Activation Date</th>
+                                            <th>Level</th>
                                             <th>Status</th>
                                         </tr>
                                     </thead>
@@ -125,6 +126,7 @@
                                                         @*<td>@Item.JoiningDate</td>*@
                                                         <td>@Item.Package</td>
                                                         <td>@Item.PermanentDate</td>
+                                                        <td>@Item.Level</td>
                                                         <td>@Item.Status</td>
 
                                                     </tr>
