--- a/MyTrade/Views/User/PayoutRequest.cshtml
+++ b/MyTrade/Views/User/PayoutRequest.cshtml
@@ -70,7 +70,7 @@
                                         <th>IFSC Code</th>
                                         <th>Account No</th>
                                         <th>Status</th>
-                                        <th>ROI Percentage</th>
+                                        @*<th>ROI Percentage</th>*@
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -91,7 +91,7 @@
                                                     <td>@Item.IFSCCode</td>
                                                     <td>@Item.AccountNo</td>
                                                     <td>@Item.Status</td>
-                                                    <td>@Item.ROIPercentage</td>
+                                                    @*<td>@Item.ROIPercentage</td>*@
                                                 </tr>
                                                 i++;
                                             }
@@ -137,7 +137,7 @@
             return false;
         }
         if (parseFloat($("#Amount").val()) < 100) {
-            alert("Transfer amount should not be minimum than 100");
+            alert("Transfer amount should not be less than 100 Rs.");
             return false;
         }
     }
@@ -145,9 +145,13 @@
     function GetFinalAmount() {
         debugger;   
         var deductionAmount = parseFloat($("#Amount").val()) * 0.02;
-        $("#lbld").text(deductionAmount);
+        if (parseFloat($("#Amount").val()) < 500)
+        {
+            deductionAmount=10;
+        }
+        $("#lbld").text(parseFloat(deductionAmount));
         var finalAmount = parseFloat($("#Amount").val()) - parseFloat(deductionAmount);
-        $("#lblf").text(finalAmount);
+        $("#lblf").text(parseFloat(finalAmount));
     }
 
 
