--- a/MyTrade/Views/Admin/BusinessReports.cshtml
+++ b/MyTrade/Views/Admin/BusinessReports.cshtml
@@ -47,7 +47,7 @@
                             </div>
                             <div class="col-lg-3 col-md-3" style="margin-top:28px">
                                 <div class="form-group">
-                                    <label>Is Downline</label>
+                                    <label>Team</label>
                                     @if (Model.IsDownline == "1")
                                     {
                                         <input type="checkbox" id="IsDownline" name="IsDownline" checked />
