--- a/MyTrade/Views/Home/Registration.cshtml
+++ b/MyTrade/Views/Home/Registration.cshtml
@@ -75,10 +75,9 @@
                         <div class="d-table-cell">
                             <div class="signup-form">
                                 <div class="logo">
-                                    <a href="index.html"><img src="~/MytradeWebsite/assets/img/logo.png" alt="image" width="150px"></a>
+                                    <a href="/Home/index"><img src="~/MytradeWebsite/assets/img/logo.png" alt="image" width="150px"></a>
                                     <h6 class="logo-tagline">One Step Towards Success</h6>
                                 </div>
-
                                 <h3>Registration</h3>
                                 <p>Already signed up? <a href="/Home/Login">Log in</a></p>
 
