--- a/MyTrade/Views/User/PayoutRequest.cshtml
+++ b/MyTrade/Views/User/PayoutRequest.cshtml
@@ -17,7 +17,7 @@
                     <div class="widget-header">
                         <div class="row">
                             <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                <h4>Transfer To Account</h4>
+                                <h4>Transfer To Bank Account</h4>
                                 <span class="text-danger">
                                     @TempData["msg"]
                                 </span>
@@ -63,6 +63,7 @@
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
+                                        <th>Transaction No</th>
                                         <th>Login Id</th>
                                         <th>Name</th>
                                         <th>Amount</th>
@@ -84,6 +85,7 @@
                                                 <tr class="text-left">
                                                     <td>@i</td>
                                                     @*<td>@Item.PK_RequestID</td>*@
+                                                    <td>@Item.TransactionNo</td>
                                                     <td>@Item.LoginId</td>
                                                     <td>@Item.Name</td>
                                                     <td>@Item.Amount</td>
@@ -153,10 +155,6 @@
         var finalAmount = parseFloat($("#Amount").val()) - parseFloat(deductionAmount);
         $("#lblf").text(parseFloat(finalAmount));
     }
-
-
-
-
 </script>
 
 
