--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -372,14 +372,28 @@
                             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100 img-height" src="~/MyTradeWebsite/assets/img/4.jpg" alt="First slide">
-                                <div class="carousel-caption d-none d-sm-block">
-                                    <h5>First slide</h5>
-                                    <p>Lorem ipsum dolor sit amet, dolore magna aliqua.</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
+
+                            @if (Model != null)
+                            {
+                                if (Model.lstReward != null)
+                                {
+                                    int i = 1;
+                                    foreach (var Item in Model.lstReward)
+                                    {
+                                        <div class="carousel-item active">
+                                            <img class="d-block w-100 img-height" src="@Item.Image" alt="First slide">
+                                            <div class="carousel-caption d-none d-sm-block">
+                                                <h5>@Item.Title</h5>
+                                                @*<p>Lorem ipsum dolor sit amet, dolore magna aliqua.</p>*@
+                                            </div>
+                                        </div>
+                                        i++;
+                                    }
+                                }
+                            }
+
+
+                            @*<div class="carousel-item">
                                 <img class="d-block w-100 img-height" src="~/MyTradeWebsite/assets/img/4.jpg" alt="Second slide">
                                 <div class="carousel-caption d-none d-sm-block">
                                     <h5>Second slide</h5>
@@ -392,7 +406,7 @@
                                     <h5>Third slide</h5>
                                     <p>Lorem ipsum dolor sit amet, dolore magna aliqua.</p>
                                 </div>
-                            </div>
+                            </div>*@
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
