--- a/MyTrade/Views/Master/Upload.cshtml
+++ b/MyTrade/Views/Master/Upload.cshtml
@@ -32,7 +32,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    Title<span style="color: red">*</span>
+                                    File<span style="color: red">*</span>
                                     <input type="file" name="postedFile" id="postedFile" class="form-control" />
                                     <br />
                                     @*<img src="@Model.Image" height="100" width="100" />*@
