--- a/MyTrade/Views/User/PinList.cshtml
+++ b/MyTrade/Views/User/PinList.cshtml
@@ -112,7 +112,7 @@
                                                     }
                                                     else
                                                     {
-                                                        <td><span>Activate</span></td>
+                                                        <td><span>Activated</span></td>
                                                     }
                                                 </tr>
                                                 i++;
