--- a/MyTrade/Views/Report/LevelIncomeTr1.cshtml
+++ b/MyTrade/Views/Report/LevelIncomeTr1.cshtml
@@ -37,6 +37,16 @@
 
                                 </div>
                             </div>
+
+                            <div class="col-lg-3 col-md-3">
+                                <div class="form-group">
+                                    <label>Status</label>
+                                    <select id="Status" name="Status" class="form-control">
+                                        <option value="0">Unpaid</option>
+                                        <option value="1">Paid</option>
+                                    </select>
+                                </div>
+                            </div>
                             <div class="col-lg-3 col-md-3" style="margin-top:28px">
                                 <div class="form-group">
                                     <input type="submit" class="btn btn-success" value="Search" name="btnSearch" />
