--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -303,9 +303,7 @@
                                         <a href="/user/TopUpList">Topup List</a>
                                     </li>
                                     <li>
-                                        <a href="/User/PayoutRequest">Topup List</a>
-
-                                        <a href="/User/PayoutRequest">Transfer To Bank Account</a>
+                                        <a href="/User/PayoutRequest">Transfer To Bank</a>
                                     </li>
                                 }
                                 else
@@ -449,6 +447,29 @@
                             </li>
                         </ul>
                     </li>
+
+                    <li class="menu">
+                        <a href="#LevelBonus" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                            <div class="">
+                                <i class="fa fa-cubes"></i>
+                                <span>Level Bonus</span>
+                            </div>
+                            <div>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
+                            </div>
+                        </a>
+                        <ul class="collapse submenu list-unstyled" id="LevelBonus" data-parent="#accordionExample">
+                            <li>
+                                <a href="/Report/LevelIncomeTr1">Level Income TTP</a>
+                            </li>
+                            <li>
+                                <a href="/Report/LevelIncomeTr2">Level Income TPS</a>
+                            </li>
+                        </ul>
+                    </li>
+
+
+
                     <li class="menu">
                         <a href="#Payout" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
@@ -462,12 +483,6 @@
                         <ul class="collapse submenu list-unstyled" id="Payout" data-parent="#accordionExample">
                             <li>
                                 <a href="/Report/PayoutWalletLedger">Payout Wallet</a>
-                            </li>
-                            <li>
-                                <a href="/Report/LevelIncomeTr1">Level Income TTP</a>
-                            </li>
-                            <li>
-                                <a href="/Report/LevelIncomeTr2">Level Income TPS</a>
                             </li>
                             <li>
                                 <a href="/Report/PayoutDetail">Payout Detail</a>
