--- a/MyTrade/Views/User/TopUp.cshtml
+++ b/MyTrade/Views/User/TopUp.cshtml
@@ -38,6 +38,8 @@
                                 <p class="text-success" id="spName"></p>
                             </div>
                             <div class="col-md-4">
+                                <input type="hidden" id="amt" />
+                                <input type="hidden" id="pkg" />
                                 <label for="Package">Package <span style="color:red">*</span></label>
                                 @Html.DropDownListFor(m => m.PackageId, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "form-control" })
                                 <p class="text-success" id="spName"></p>
@@ -47,69 +49,104 @@
                                 <label for="Amount">Amount <span style="color:red">*</span></label>
                                 @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Amount", @onkeypress = "return isNumberKey(event);", @onchange = "return CheckAmount();" })
                                 <span style="color:red">Min  : @ViewBag.FromAmount </span><span style="color:red;padding-left:50px"> Max : @ViewBag.ToAmount </span><span style="color:red;padding-left:50px"> In Multiple Of : @ViewBag.InMultipleOf</span>
-                                <input type="hidden" value="@ViewBag.ToAmount" id="hdfMax"/>
+                                <input type="hidden" value="@ViewBag.ToAmount" id="hdfMax" />
                             </div>
                         </div>
                         @*<div class="row mb-4">
-                            <div class="col-md-4">
-                                <label for="Amount">
-                                    Payment Type
-                                </label><span style="color: red">*</span>
-                                @Html.DropDownListFor(m => m.PaymentType, new SelectList(ViewBag.ddlpaymentType, "Value", "Text"), new { @class = "form-control", @onchange = "getpaymentTypedetails();" })
+                                <div class="col-md-4">
+                                    <label for="Amount">
+                                        Payment Type
+                                    </label><span style="color: red">*</span>
+                                    @Html.DropDownListFor(m => m.PaymentType, new SelectList(ViewBag.ddlpaymentType, "Value", "Text"), new { @class = "form-control", @onchange = "getpaymentTypedetails();" })
+                                </div>
+                                <div class="col-md-4" id="paymentmode" style="display: none">
+                                    <label for="Mode">Mode<span style="color:red">*</span></label>
+                                    @Html.DropDownListFor(m => m.PaymentMode, new SelectList(ViewBag.ddlpaymentmode, "Value", "Text"), new { @class = "form-control", @onchange = "return CheckPayMode();" })
+                                </div>
                             </div>
-                            <div class="col-md-4" id="paymentmode" style="display: none">
-                                <label for="Mode">Mode<span style="color:red">*</span></label>
-                                @Html.DropDownListFor(m => m.PaymentMode, new SelectList(ViewBag.ddlpaymentmode, "Value", "Text"), new { @class = "form-control", @onchange = "return CheckPayMode();" })
-                            </div>
-                        </div>
-                        <div class="row mb-4" style="display:none" id="divPaymentMode">
-                            <div class="col-md-3" id="divQr" style="display: none">
-                                <label id="lblQr"> Scan QR </label>
-                                <img src="~/assets/img/QR.jpeg" height="200" width="200" />
-                            </div>
-                            <div class="col-md-3" id="divbankname">
-                                <label for="BankName" id="lblbank">Bank Name</label>
-                                @Html.TextBoxFor(m => m.BankName, new { @class = "form-control", @placeholder = "Bank Name", })
-                            </div>
-                            <div class="col-md-3" id="divbankbranch">
-                                <label for="BranchName" id="lbltbranch">Branch Name</label>
-                                @Html.TextBoxFor(m => m.BankBranch, new { @class = "form-control", @placeholder = "Branch Name" })
-                            </div>
-                            <div class="col-md-3" id="divtransactiono">
-                                <label for="TransactionNo" id="lbltno">Transaction No</label>
-                                @Html.TextBoxFor(m => m.TransactionNo, new { @class = "form-control", @placeholder = "TransactionNo", })
-                            </div>
-                            <div class="col-md-3" id="divtrdate">
-                                <label for="TransactionDate" id="lbltdate">TransactionDate</label>
-                                @Html.TextBoxFor(m => m.TransactionDate, new { @class = "form-control", @placeholder = "Transaction Date" })
-                            </div>
-                        </div>*@
+                            <div class="row mb-4" style="display:none" id="divPaymentMode">
+                                <div class="col-md-3" id="divQr" style="display: none">
+                                    <label id="lblQr"> Scan QR </label>
+                                    <img src="~/assets/img/QR.jpeg" height="200" width="200" />
+                                </div>
+                                <div class="col-md-3" id="divbankname">
+                                    <label for="BankName" id="lblbank">Bank Name</label>
+                                    @Html.TextBoxFor(m => m.BankName, new { @class = "form-control", @placeholder = "Bank Name", })
+                                </div>
+                                <div class="col-md-3" id="divbankbranch">
+                                    <label for="BranchName" id="lbltbranch">Branch Name</label>
+                                    @Html.TextBoxFor(m => m.BankBranch, new { @class = "form-control", @placeholder = "Branch Name" })
+                                </div>
+                                <div class="col-md-3" id="divtransactiono">
+                                    <label for="TransactionNo" id="lbltno">Transaction No</label>
+                                    @Html.TextBoxFor(m => m.TransactionNo, new { @class = "form-control", @placeholder = "TransactionNo", })
+                                </div>
+                                <div class="col-md-3" id="divtrdate">
+                                    <label for="TransactionDate" id="lbltdate">TransactionDate</label>
+                                    @Html.TextBoxFor(m => m.TransactionDate, new { @class = "form-control", @placeholder = "Transaction Date" })
+                                </div>
+                            </div>*@
                         <div class="col-md-4">
-                            <input class="btn btn-success" name="btn_Pin" id="btn_Pin" type="submit" value="Submit" onclick="return ValidateForm();" />
+                            <input class="btn btn-success" name="btn_Pin" id="btn_Pin" type="button" value="Submit" onclick="return ValidateForm();" data-toggle="modal" />
                         </div>
                         @*<div class="row mb-4">
-                            <div class="col-md-12">
-                                <span style="color:red">From Amount : @ViewBag.FromAmount </span><span style="color:red;padding-left:50px"> To Amount : @ViewBag.ToAmount </span><span style="color:red;padding-left:50px"> In Multiple Of : @ViewBag.InMultipleOf</span>
-                            </div>
-                        </div>*@
+                                <div class="col-md-12">
+                                    <span style="color:red">From Amount : @ViewBag.FromAmount </span><span style="color:red;padding-left:50px"> To Amount : @ViewBag.ToAmount </span><span style="color:red;padding-left:50px"> In Multiple Of : @ViewBag.InMultipleOf</span>
+                                </div>
+                            </div>*@
 
                     </div>
                 </div>
             </div>
         </div>
     </div>
-}
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
-<script>
-    $(document).ready(function () {
-        $("#PaymentType").val('Online');
-    });
-    $('#TransactionDate').datepicker({
-        dateFormat: 'dd/mm/yy',
-    });
+                   <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p class="modal-text">
+                        Hello
+                        @if (Session["Gender"] != null)
+                        {
+                            if (Session["Gender"].ToString() == "F")
+                            {
 
+                                <span>Ms. @Session["FullName"]</span>
+                            }
+                            else
+                            {
+                                <span>Mr.@Session["FullName"]</span>
+                            }
+                        }
+                        else
+                        {
+                            <span>@Session["FullName"]</span>
+                        }
+                        , your <label id="lblTPS"></label> package for Rs. <label id="lblAmount"></label> is being initiated with ROI @ViewBag.ROIPercent % per day
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn" data-dismiss="modal"><i class="flaticon-cancel-12"></i> Discard</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+<script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script>
+    //$(document).ready(function () {
+    //    $("#PaymentType").val('Online');
+    //});
     //$(function () {
     //    var $j = jQuery.noConflict();
     //    $("#TopUpDate").datepicker({
@@ -119,20 +156,20 @@
     //        dateFormat: 'dd/mm/yy',
     //    });
     //});
-    function getpaymentTypedetails() {
-        debugger;
-        if ($('#PaymentType').val() == 'Offline') {
-            $("#paymentmode").show();
-        }
-        else if ($('#PaymentType').val() == 'Online') {
-            $("#paymentmode").hide();
-            $("#divPaymentMode").hide();
-            $("#BankName").val('');
-            $("#BankBranch").val('');
-            $("#TransactionNo").val('');
-            $("#TransactionDate").val('');
-        }
-    }
+    //function getpaymentTypedetails() {
+    //    debugger;
+    //    if ($('#PaymentType').val() == 'Offline') {
+    //        $("#paymentmode").show();
+    //    }
+    //    else if ($('#PaymentType').val() == 'Online') {
+    //        $("#paymentmode").hide();
+    //        $("#divPaymentMode").hide();
+    //        $("#BankName").val('');
+    //        $("#BankBranch").val('');
+    //        $("#TransactionNo").val('');
+    //        $("#TransactionDate").val('');
+    //    }
+    //}
     function isNumberKey(evt) {
         var charCode = (evt.which) ? evt.which : event.keyCode;
         if (charCode != 46 && charCode > 31
@@ -158,8 +195,7 @@
                     $("#Amount").val('');
                     return false;
                 }
-                else if(parseInt(Amount)>parseInt(@ViewBag.ToAmount))
-                {
+                else if (parseInt(Amount) > parseInt(@ViewBag.ToAmount)) {
                     Snackbar.show({
                         text: "Amount should not be greater than max smount",
                         actionTextColor: '#fff',
@@ -191,118 +227,89 @@
         return true;
     }
     function ValidateForm() {
+        debugger;
+        jQuery.noConflict();
+        $('#exampleModal').modal('hide');
         $(".errortext").removeClass("errortext");
         if ($('#PackageId').val() == '0') {
             $("#PackageId").addClass('errortext');
             $('#PackageId').focus();
             return false;
         }
-        //if ($('#Amount').val() == '') {
-        //    $("#Amount").addClass('errortext');
-        //    $('#Amount').focus();
-        //    return false;
-        //}
-        if ($('#PackageId').val() == '0') {
-            $("#PackageId").addClass('errortext');
-            $('#PackageId').focus();
+        else if ($('#Amount').val() == '') {
+            $("#Amount").addClass('errortext');
+            $('#Amount').focus();
             return false;
-        }
-        if ($('#PaymentType').val() == '') {
-            $("#PaymentType").addClass('errortext');
-            $('#PaymentType').focus();
-            return false;
-        }
-        if ($('#PaymentMode').val() == '') {
-            $("#PaymentMode").addClass('errortext');
-            $('#PaymentMode').focus();
-            return false;
-        }
-        if (($("#PaymentMode option:selected").text()) != 'Cash' && ($("#PaymentMode option:selected").text()) != "UPI") {
-            if ($('#BankName').val() == '') {
-                $("#BankName").addClass('errortext');
-                $('#BankName').focus();
-                return false;
-            }
-            if ($('#TransactionNo').val() == '') {
-                $("#TransactionNo").addClass('errortext');
-                $('#TransactionNo').focus();
-                return false;
-            }
-            if ($('#TransactionDate').val() == '') {
-                $("#TransactionDate").addClass('errortext');
-                $('#TransactionDate').focus();
-                return false;
-            }
-            if ($('#BankBranch').val() == '') {
-                $("#BankBranch").addClass('errortext');
-                $('#BankBranch').focus();
-                return false;
-            }
-        }
-        else if ($("#PaymentMode option:selected").text() == "UPI") {
-            if ($('#BankName').val() == '') {
-                $("#BankName").addClass('errortext');
-                $('#BankName').focus();
-                return false;
-            }
-            if ($('#TransactionNo').val() == '') {
-                $("#TransactionNo").addClass('errortext');
-                $('#TransactionNo').focus();
-                return false;
-            }
-            if ($('#TransactionDate').val() == '') {
-                $("#TransactionDate").addClass('errortext');
-                $('#TransactionDate').focus();
-                return false;
-            }
         }
         else {
-
+            SetAmountandPackage();
+            return true;
         }
-        return true;
+
     }
-    function CheckPayMode() {
+    function SetAmountandPackage() {
         debugger;
-        if ($('#PaymentMode').val() != '1' && $('#PaymentMode').val() != "10") {
-            $('#lbltno').html('Transaction No.');
-            $('#lbltdate').html('Transaction Date');
-            $('#lblbank').html('Bank Name');
-            $("#divtrdate").show();
-            $("#divPaymentMode").show();
-            $("#divtransactiono").show();
-            $("#divbankname").show();
-            $("#divbankbranch").show();
-            $("#divQr").hide();
-            $("#BankName").attr("placeholder", "Bank Name");
-            $("#TransactionNo").attr("placeholder", "Transaction No.");
-            $("#TransactionDate").attr("placeholder", "Transaction Date");
-        }
-        else if ($('#PaymentMode').val() == "10") {
-            $('#lbltno').html('Transaction Id');
-            $('#lbltdate').html('Transaction Date');
-            $('#lblbank').html('UPI Id');
-            $("#BankName").val('');
-            $("#BankBranch").val('');
-            $("#divtrdate").show();
-            $("#divPaymentMode").show();
-            $("#divtransactiono").show();
-            $("#divbankname").show();
-            $("#divQr").show();
-            $("#divbankbranch").hide();
-            $("#BankName").attr("placeholder", "UPI Id");
-            $("#TransactionNo").attr("placeholder", "Transaction Id");
-            $("#TransactionDate").attr("placeholder", "Transaction Date");
-        }
-        else {
-            $("#divPaymentMode").hide();
-            $("#divtransactiono").hide();
-            $("#divbankname").hide();
-            $("#divbankbranch").hide();
-            $("#divtrdate").hide();
-            $("#divQr").hide();
-        }
-
+        jQuery.noConflict();    
+        $('#exampleModal').modal('show');
+        $("#lblAmount").text($("#Amount").val());
+        $("#lblTPS").text($("#PackageId :selected").text());
     }
+    //function CheckPayMode() {
+    //    debugger;
+    //    if ($('#PaymentMode').val() != '1' && $('#PaymentMode').val() != "10") {
+    //        $('#lbltno').html('Transaction No.');
+    //        $('#lbltdate').html('Transaction Date');
+    //        $('#lblbank').html('Bank Name');
+    //        $("#divtrdate").show();
+    //        $("#divPaymentMode").show();
+    //        $("#divtransactiono").show();
+    //        $("#divbankname").show();
+    //        $("#divbankbranch").show();
+    //        $("#divQr").hide();
+    //        $("#BankName").attr("placeholder", "Bank Name");
+    //        $("#TransactionNo").attr("placeholder", "Transaction No.");
+    //        $("#TransactionDate").attr("placeholder", "Transaction Date");
+    //    }
+    //    else if ($('#PaymentMode').val() == "10") {
+    //        $('#lbltno').html('Transaction Id');
+    //        $('#lbltdate').html('Transaction Date');
+    //        $('#lblbank').html('UPI Id');
+    //        $("#BankName").val('');
+    //        $("#BankBranch").val('');
+    //        $("#divtrdate").show();
+    //        $("#divPaymentMode").show();
+    //        $("#divtransactiono").show();
+    //        $("#divbankname").show();
+    //        $("#divQr").show();
+    //        $("#divbankbranch").hide();
+    //        $("#BankName").attr("placeholder", "UPI Id");
+    //        $("#TransactionNo").attr("placeholder", "Transaction Id");
+    //        $("#TransactionDate").attr("placeholder", "Transaction Date");
+    //    }
+    //    else {
+    //        $("#divPaymentMode").hide();
+    //        $("#divtransactiono").hide();
+    //        $("#divbankname").hide();
+    //        $("#divbankbranch").hide();
+    //        $("#divtrdate").hide();
+    //        $("#divQr").hide();
+    //    }
+
+    //}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </script>
 
 @if (TempData["msg"] != null)
