--- a/MyTrade/Views/Wallet/WalletList.cshtml
+++ b/MyTrade/Views/Wallet/WalletList.cshtml
@@ -59,6 +59,10 @@
                                                     {
                                                         <td><a href="/Wallet/DeleteWallet?id=@Item.RequestID" class="btn btn-danger btn-sm " onclick="return confirm('Are you sure you want to delete this wallet request ?') ">Delete</a></td>
                                                     }
+                                                    else
+                                                    {
+                                                     <td><span>Success</span></td>   
+                                                    }
 
                                                 </tr>
                                                 i++;
