--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -460,10 +460,10 @@
                         </a>
                         <ul class="collapse submenu list-unstyled" id="LevelBonus" data-parent="#accordionExample">
                             <li>
-                                <a href="/Report/LevelIncomeTr1">Level Income TTP</a>
+                                <a href="/Report/LevelIncomeTr1">Level Bonus TTP</a>
                             </li>
                             <li>
-                                <a href="/Report/LevelIncomeTr2">Level Income TPS</a>
+                                <a href="/Report/LevelIncomeTr2">Level Bonus TPS</a>
                             </li>
                         </ul>
                     </li>
