--- a/MyTrade/Views/Admin/AdvanceDeduction.cshtml
+++ b/MyTrade/Views/Admin/AdvanceDeduction.cshtml
@@ -1,11 +1,11 @@
 ﻿@model MyTrade.Models.Admin
 
 @{
-    ViewBag.Title = "TransferWallet";
+    ViewBag.Title = "AdvanceDeduction";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("TransferWallet", "Admin", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
+@using (Html.BeginForm("AdvanceDeduction", "Admin", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
     <div class="container">
         <div class="row layout-top-spacing">
@@ -14,9 +14,9 @@
                     <div class="widget-header">
                         <div class="row">
                             <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                <h4>Transfer Wallet</h4>
+                                <h4>Advance/Deduction</h4>
                                 <span class="text-danger">
-                                    @TempData["TransferWallet"]
+                                    @TempData["deduction"]
                                 </span>
                             </div>
                         </div>
@@ -24,16 +24,16 @@
                     <div class="widget-content widget-content-area">
                         <div class="row">
                             <div class="col-md-4">
-                                @Html.HiddenFor(m=>m.Fk_UserId)
+                                @Html.HiddenFor(m => m.Fk_UserId)
                                 <div class="form-group">
                                     Login Id<span style="color: red">*</span>
-                                    @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id",@onchange= "return GetNameDetails();" })
+                                    @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id", @onchange = "return GetNameDetails();" })
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
                                     Name<span style="color: red">*</span>
-                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @placeholder = "Name",@readonly=true})
+                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @placeholder = "Name", @readonly = true })
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -42,11 +42,27 @@
                                     @Html.TextBoxFor(m => m.CrAmount, new { @class = "form-control", @placeholder = "Amount" })
                                 </div>
                             </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    Advance/Deduction<span style="color: red">*</span>
+                                    <select id="Narration" name="Narration" class="form-control">
+                                        <option value="0">-Select-</option>
+                                        <option value="Advance">Advance</option>
+                                        <option value="Deduction">Deduction</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    Remark
+                                    @Html.TextAreaFor(m => m.Remark, new { @class = "form-control", @placeholder = "Remark" })
+                                </div>
+                            </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input class="btn btn-success pull-left" type="submit" value="Transfer" id="Transfer" name="Transfer" onclick="return validate();" />
+                                    <input class="btn btn-success pull-left" type="submit" value="Advance" id="Advance" name="Advance" onclick="return validate();" />
                                 </div>
                             </div>
                         </div>
@@ -72,6 +88,11 @@
         if ($('#CrAmount').val() == '') {
             $("#CrAmount").addClass('errortext');
             $('#CrAmount').focus();
+            return false;
+        }
+        if ($('#Narration').val() == '0') {
+            $("#Narration").addClass('errortext');
+            $('#Narration').focus();
             return false;
         }
     }
@@ -102,6 +123,7 @@
         });
     }
 
+
 </script>
 <style>
     .errortext {
@@ -109,6 +131,8 @@
         background-color: #fff0f0 !important;
     }
 </style>
+
+
 
 
 
