--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -129,7 +129,7 @@
     }
 
     .carousel-caption {
-        bottom: -16px;
+        /*bottom: -16px;*/
         background-color: #282828ba;
     }
 
@@ -402,7 +402,7 @@
 
                                         <div class="carousel-item active">
                                             <img class="d-block w-100 img-height" src="@Model.lstReward[i].Image" alt="First slide">
-                                            <div class="carousel-caption d-none d-sm-block">
+                                            <div class="carousel-caption">
                                                 <h5>@Model.lstReward[i].Title</h5>
                                             </div>
                                         </div>
