--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -400,8 +400,8 @@
                                     for (int i = 0; i < 1; i++)
                                     {
 
-                                        <div class="carousel-item active">
-                                            <img class="d-block w-100 img-height" src="@Model.lstReward[i].Image" alt="First slide">
+                                        <div class="carousel-item active" style="padding: 10px;">
+                                            <img class="d-block w-100 img-height" src="@Model.lstReward[i].Image" alt="First slide" style="border-radius: 10px;">
                                             <div class="carousel-caption">
                                                 <h5>@Model.lstReward[i].Title</h5>
                                             </div>
