--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -416,8 +416,8 @@
                                     for (int i = 1; i < Model.lstReward.Count; i++)
                                     {
 
-                                        <div class="carousel-item">
-                                            <img class="d-block w-100 img-height" src="@Model.lstReward[i].Image" alt="First slide">
+                                        <div class="carousel-item" style="padding: 10px;">
+                                            <img class="d-block w-100 img-height" src="@Model.lstReward[i].Image" alt="First slide" style="border-radius: 10px;">
                                             <div class="carousel-caption d-none d-sm-block">
                                                 <h5>@Model.lstReward[i].Title</h5>
                                             </div>
